--- a/package.json
+++ b/package.json
@@ -1,49 +1,79 @@
 {
-	"name": "pack-remix-boilerplate",
-	"private": true,
-	"sideEffects": false,
-	"type": "module",
-	"scripts": {
-		"build": "remix vite:build",
-		"deploy": "pnpm run build && wrangler pages deploy",
-		"dev": "remix vite:dev",
-		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-		"start": "wrangler pages dev ./build/client",
-		"typecheck": "tsc",
-		"typegen": "wrangler types",
-		"preview": "pnpm run build && wrangler pages dev",
-		"cf-typegen": "wrangler types"
-	},
-	"dependencies": {
-		"@remix-run/cloudflare": "^2.15.3",
-		"@remix-run/cloudflare-pages": "^2.15.3",
-		"@remix-run/react": "^2.15.3",
-		"isbot": "^4.1.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20250313.0",
-		"@remix-run/dev": "^2.15.3",
-		"@types/react": "^18.2.20",
-		"@types/react-dom": "^18.2.7",
-		"@typescript-eslint/eslint-plugin": "^6.7.4",
-		"@typescript-eslint/parser": "^6.7.4",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.38.0",
-		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-react": "^7.33.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"postcss": "^8.4.38",
-		"tailwindcss": "^3.4.4",
-		"typescript": "^5.1.6",
-		"vite": "^6.0.0",
-		"vite-tsconfig-paths": "^4.2.1",
-		"wrangler": "4.0.0"
-	},
-	"engines": {
-		"node": ">=20.0.0"
-	}
+  "name": "pack-remix-boilerplate",
+  "private": true,
+  "sideEffects": false,
+  "type": "module",
+  "scripts": {
+    "build": "remix vite:build",
+    "deploy": "pnpm run build && wrangler pages deploy",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "wrangler pages dev ./build/client",
+    "typecheck": "tsc",
+    "typegen": "wrangler types",
+    "preview": "pnpm run build && wrangler pages dev",
+    "cf-typegen": "wrangler types"
+  },
+  "dependencies": {
+    "0xsequence": "^2.2.15",
+    "@0xsequence/api": "^2.2.15",
+    "@0xsequence/design-system": "^2.0.10",
+    "@0xsequence/indexer": "^2.2.15",
+    "@0xsequence/kit": "^4.6.5",
+    "@0xsequence/kit-checkout": "^4.6.5",
+    "@0xsequence/metadata": "^2.2.15",
+    "@0xsequence/network": "^2.2.15",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@remix-run/cloudflare": "^2.15.3",
+    "@remix-run/cloudflare-pages": "^2.15.3",
+    "@remix-run/react": "^2.15.3",
+    "@tanstack/react-query": "^5.68.0",
+    "boilerplate-design-system": "github:0xsequence-demos/boilerplate-design-system#08dfb9404fdaaa7fa80d55522f6552af4e811cd2",
+    "ethers": "^6.13.5",
+    "framer-motion": "^12.5.0",
+    "isbot": "^4.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router": "^7.3.0",
+    "react-toastify": "^11.0.5",
+    "sonner": "^2.0.1",
+    "three": "^0.174.0",
+    "viem": "^2.23.11",
+    "wagmi": "^2.14.13"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250313.0",
+    "@remix-run/dev": "^2.15.3",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.38.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.1.6",
+    "vite": "^6.0.0",
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "4.0.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bufferutil",
+      "keccak",
+      "utf-8-validate"
+    ]
+  }
 }
+
